--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,12 @@
+lsi: false
+safe: true
+source: .
+destination: docs
+incremental: false
+highlighter: rouge
+gist:
+  noscript: false
+kramdown:
+  math_engine: mathjax
+  syntax_highlighter: rouge
 theme: jekyll-theme-cayman
