--- a/_config.yml
+++ b/_config.yml
@@ -30,9 +30,10 @@ description: >- # this means to ignore newlines until "baseurl:"
 #github_username:  
 
 # Build settings
-theme: minimal-mistakes-jekyll 
+remote_theme: "mmistakes/minimal-mistakes@4.24.0"
 plugins:
   - jekyll-feed
+  - jekyll-include-cache
 
 # Exclude from processing.
 # The following items will not be processed, by default.
